WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242651
REGRESSION (
r294523
): Hitting return twice leaves a vertical line character in Gmail message compose view in Safari (blinking caret sticks)
https://bugs.webkit.org/show_bug.cgi?id=242651
Summary
REGRESSION (r294523): Hitting return twice leaves a vertical line character i...
Richard Robinson
Reported
2022-07-12 13:58:14 PDT
While composing an email when using Gmail in Safari, using a double space or two newlines sometimes renders an extra caret in space between paragraphs in email.
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2022-07-12 13:58:31 PDT
rdar://96150129
Richard Robinson
Comment 2
2022-07-12 14:11:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2338
EWS
Comment 3
2022-07-20 21:46:21 PDT
Committed
252683@main
(da96b048f1a9): <
https://commits.webkit.org/252683@main
> Reviewed commits have been landed. Closing PR #2338 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug