Cherry-pick da96b048f1a9. rdar://problem/96150129

While composing an email when using Gmail in Safari, using a double space creates an extra line/visible character in space between paragraphs in email.
    https://bugs.webkit.org/show_bug.cgi?id=242651
    rdar://96150129

    Reviewed by Ryosuke Niwa and Wenson Hsieh.

    Prior to r294523, selection updates were performed synchronously, so there is no pending
    update when layout is being performed, and Gmail's node insertion/removal does not result
    in a selection update.

    In Gmail. when composing a new email, adding a newline causes `setSelection` to be called,
    which schedules a selection update by setting `m_pendingSelectionUpdate = true`.

    Then, the `keydown` event listener is fired, and a zero-delay timer on the Gmail JS side
    is invoked. A text node is then inserted into the document via JS.

    A layout update is then triggered, which causes a selection update, which calls `recomputeCaretRect`.

    The problem is then that `m_previousCaretNode` gets set based on the current selection,
    however that selected node then gets removed from the document. Since `m_previousCaretNode`
    is a removed node, no rect is returned and so invalidation never happens leading to a
    stale caret still being displayed.

    This PR fixes this by checking for this failure case, and then ensuring that
    `m_previousCaretNode` is not in a bad state and does not represent a removed node.

    * Source/WebCore/editing/Editor.cpp:
    (WebCore::Editor::appliedEditing):
    * Source/WebCore/editing/Editor.h:
    (WebCore::Editor::setIsProcessingKeyCommand):
    (WebCore::Editor::isProcessingKeyCommand const):
    * Source/WebKit/WebProcess/WebPage/mac/WebPageMac.mm:
    (WebKit::WebPage::executeKeypressCommandsInternal):

    Canonical link: https://commits.webkit.org/252683@main

Canonical link: https://commits.webkit.org/252432.131@safari-7614-branch